# fiftyone-segment-anything

./: .gitignore  article.md  pyproject.toml
fiftyone_SAM_files/: Segment Anything with FiftyOne.ipynb
