[tool.poetry]
name = "fiftyone-test"
version = "0.1.0"
description = ""
authors = ["kylestratis <kyle.stratis@gmail.com>"]
readme = "README.md"
packages = [{include = "fiftyone-test"}]

[tool.poetry.dependencies]
python = "^3.11"
fiftyone = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
